<resources>
    <!-- menu strings -->
    <string name="app_name">Siddur Tehilat Hashem</string>
    <string name="holidays">Holidays</string>
    <string name="daily">Daily prayers</string>
    <string name="settings">Settings</string>
    <string name="description">Description</string>
    <string name="shararit">Weekday Shaharit</string>
    <string name="mincha">Mincha</string>
    <string name="korbanot">Korbanot</string>
    <string name="ashrei">Ashrei</string>
    <string name="amida">The Amidah</string>
    <string name="tachanun">Tachanun</string>
    <string name="aleinu">Aleinu</string>
    <string name="maariv">Maariv</string>
    <string name="vehu_rachum">Vehu Rachum</string>
    <string name="todayis">Today is </string>
    <string name="in">in</string>
    <string name="days">days</string>
    <string name="noholidays">no holidays</string>
    <string name="mode_ani">Mode Ani</string>
    <string name="tzitzit">Blessing in the Tziztzit</string>
    <string name="talit">Order of putting on the Tallit</string>
    <string name="mishna">Mishna</string>
    <string name="baraita">Baraita</string>
    <string name="kaddish_derabanan">Kaddish derabanan</string>
    <string name="hoidu">Hodu</string>
    <string name="psukei_dezimra">Psukei dezimra</string>
    <string name="barchu">Barchu</string>
    <string name="shema">The Shema</string>
    <string name="avinu_malkeinu">Avinu Malkeinu</string>
    <string name="hatzi_kaddish">Hatzi Kaddish</string>
    <string name="readingTorah">Reading of the Torah</string>
    <string name="raisingTorah">Raising of the Torah</string>
    <string name="beit_yaakob">Beit-Yaakov</string>
    <string name="psalmsoftheday">Psalm of the Day</string>
    <string name="hope_kave">Hope</string>
    <string name="kaddishyatom">Kaddish Yatom</string>
    <string name="rabeinutam">Rabbeinu-Tam</string>
    <string name="sixmembers">Six Remembrances</string>
    <string name="kaddishshalem">Kaddish Shalem</string>
    <string name="kaddish">Kaddish</string>
    <string name="tehilim">Tehilim</string>
    <string name="birkathamazon">Blessing after a meal</string>
    <string name="britmila">Brit-Mila</string>
    <string name="shevaberachot">The Seven Blessings</string>
    <string name="psalm">Psalm</string>
    <string name="hazan">Hazan</string>
    <string name="community">Community</string>
    <string name="roshhashana">Rosh Hashanah</string>
    <string name="yomkippur">Yom Kippur</string>
    <string name="sukkot">Sukkot</string>
    <string name="chanukah">Chanukah</string>
    <string name="pesach">Pesach</string>
    <string name="shavuot">Shavuot</string>
    <string name="Purim">Purim</string>
    <string name="actual_events">Actual events:</string>
    <string name="BlessingLanguage">Blessing language</string>
    <string name="TextSize">Text size</string>
    <string name="Theme">Theme</string>
    <string name="upcoming_holidays">Upcoming holidays</string>
    <string name="travel">Traveler\'s Prayer</string>
    <string name="kriat_shema">Bedtime Shema</string>
    <string name="error_on_load">Error on load:</string>
    <string name="all_prayers">All Prayers</string>
    <string name="home">Sidur</string>
    <string name="back_button_description">Back to prayer selection</string>

    <string name="settings_title">Settings</string>
    <string name="about_app_title">About App</string>
    <string name="about_app_text">This app is designed to help you read prayers. Version 1.0. Developed with care for users.</string>


    <string name="show_all">Show all</string>
    <string name="show_less">Show less</string>
    <string name="more_events">and another %d</string>

    <string name="compass_button">Сompass</string>

    <string name="compass_title">Compass on the Wailing Wall</string>
    <string name="compass_description">Compass Image</string>
    <string name="direction_to_wailing_wall">The direction to the Wailing Wall</string>
    <string name="shabbat_times">Shabbat Time</string>
    <string name="candle_lighting_placeholder">Candle lighting: loading...</string>
    <string name="havdalah_placeholder">Havdalah: download...</string>
    <string name="candle_lighting_format">Spark plug ignition: %s</string>
    <string name="havdalah_format">Havdalah: %s</string>


    <string name="wailing_wall_latitude" translatable="false">31.7767</string>
    <string name="wailing_wall_longitude" translatable="false">35.2345</string>

    <!-- Длительность анимации компаса (в миллисекундах) -->
    <integer name="compass_animation_duration">1000</integer>

    <!-- Формат строки направления -->

    <!-- Сообщения об ошибках -->
    <string name="direction_format">The direction to the Wailing Wall: %.0f°</string>
    <string name="location_permission_required">Location access permission is required</string>
    <string name="location_not_determined">Couldn\'t determine location</string>
    <string name="calibrate_compass_message">Please calibrate the compass (make a figure-of-eight movement)</string>

    <string name="tdoka">Tzedakah</string>
    <string name="donate_button">Give the tzedakah</string>
    <string name="donation_title">Donation</string>
    <string name="donation_recipient">Recipient</string>
    <string name="donation_amount">The amount</string>
    <string name="enter_amount">Enter the amount</string>
    <string name="submit_donation">Send</string>
    <string name="app_language">App Language</string>
    <string name="mein_shalosh">Mein Shalosh</string>

    <string name="avdala">Havdalah</string>
    <string name="nasi">The Nasi</string>
    <string name="weekly_parasha">Weekly Parashat:</string>

    <string name="weekly_parasha_format">Parashat: %s</string>
    <string name="lib">Library</string>
    <string name="location_unavailable">Location unavailable.</string>
    <string name="feature_not_supported">Feature not supported</string>
    <string name="default_theme">Default</string>
    <string name="dark_theme">Dark</string>
    <string name="white_theme">White</string>
    <string name="goto_library">Go to the Library (closed)</string>
    <string name="clear_cache_button">Clear cache</string>
    <string name="no_data_available">No data available</string>
    <string name="donation_success_synagogue">Your donation will be sent to %1$s.</string>
    <string name="donation_success_dev">Your donation will be sent to developer support.</string>
    <string name="donation_thank_you">Thank you for your donation!</string>
    <string name="donation_error_amount">Please enter the amount</string>
    <string name="donation_invalid_amount">The amount must be greater than 0</string>
    <string name="donation_invalid_input">Please enter the correct amount.</string>
    <string name="synagogue">The Synagogue</string>
    <string name="app_developers">Application Developers</string>

    <string-array name="morning_prayers">
        <item>@string/shararit</item>
        <item>@string/mincha</item>
        <item>@string/maariv</item>
        <item>@string/tehilim</item>
        <item>@string/birkathamazon</item>
        <item>@string/kriat_shema</item>
    </string-array>
</resources>
