<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/bg1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donation_title"
        android:textColor="@color/text4"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <!-- Выбор суммы -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donation_amount"
        android:textColor="@color/text4"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/amount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/enter_amount"
        android:textColor="@color/text4"
        android:background="@android:drawable/edit_text"
        android:padding="8dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_donate_international"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Support Project (International)"
        android:backgroundTint="@color/accent"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_donate_russia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Поддержать (ЮKassa)"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/accent"
        android:textColor="@android:color/white" />


    <TextView
        android:id="@+id/donation_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ваше пожертвование является добровольным и не подразумевает получения товаров или услуг. Спасибо за вашу поддержку!"
        android:textColor="@color/text4"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />
</LinearLayout>