<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AllPrayersFragment"
    android:background="@color/bg1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:visibility="visible"
        tools:ignore="UselessParent">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name">

            <LinearLayout
                style="@style/CardStyle"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/all_prayers"
                    android:textColor="@color/text4"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/allList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@android:color/darker_gray"
                    android:dividerHeight="1dp"
                    android:padding="0dp"
                    tools:ignore="NestedScrolling" />

                <ImageView
                    android:id="@+id/separator1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/separator" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lib"
                    android:textColor="@color/text4"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- Кнопка для Китцур Шулхан Арух -->
                <Button
                    android:id="@+id/kitsurButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Китцур Шулхан Арух"
                    android:textColor="@color/text4"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/pipButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="другая книга"
                    android:textColor="@color/text4"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/pip1Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="и еще другая книга"
                    android:textColor="@color/text4"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>